Product filter and search bar contaienr fixed, z-index reduced

--- a/css/products/products/filters.css
+++ b/css/products/products/filters.css
@@ -12,7 +12,7 @@
     border-radius: 15px;
     padding: 1.5rem;
     margin-bottom: 3rem;
-    z-index: 100;
+    z-index: 10;
     display: flex;
     gap: 2rem;
     align-items: center;
